@@ -1,6 +1,8 @@
 0.8.5 (UNRELEASED)
 ------------------
 - Fix building with gcc 4.9 on 32 bit architectures.
+- Restrict input-touchpad test case to 64 bit architectures, as we don't
+  currently have recorded ioctls for 32 bit.
 
 0.8.4 (2014-07-10)
 ------------------
